your commit message here

--- a/public/index.html
+++ b/public/index.html
@@ -1,100 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>⚡CreeperProxy</title>
-
-    <!-- Aesthetic Meta -->
-    <meta name="theme-color" content="#00ff88" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <title>Ultraviolet | Sophisticated Web Proxy</title>
+    <meta
+      name="description"
+      content="Ultraviolet is a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers. Unblock sites today!"
+    />
+    <meta
+      name="keywords"
+      content="proxy, web proxy, ultraviolet, service workers, unblock websites, unblock chromebook, free web proxy, proxy list, proxy sites, un block chromebook, online proxy, proxy server, proxysite, proxy youtube, bypass securly, bypass iboss, bypass lightspeed filter, holy unblocker, chromebooks, titanium network, unblock youtube, youtube proxy, unblocked youtube, youtube unblocked"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="#434c5e"
+    />
+    <meta name="googlebot" content="index, follow, snippet" />
+    <link rel="shortcut icon" content="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
-
-    <!-- Scripts -->
     <script src="baremux/index.js" defer></script>
     <script src="epoxy/index.js" defer></script>
     <script src="uv/uv.bundle.js" defer></script>
     <script src="uv/uv.config.js" defer></script>
     <script src="register-sw.js" defer></script>
+    <script src="search.js" defer></script>
     <script src="index.js" defer></script>
-
-    <!-- Hacker Vibes -->
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: "Courier New", monospace;
-        background-color: #000;
-        color: #00ff88;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        text-align: center;
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What is Ultraviolet (Web Proxy)?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers and more!"
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How do I unblock sites using Ultraviolet?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Simply head to an official site featuring Ultraviolet such as Holy Unblocker or Incognito! You can also self-host Ultraviolet on your own web server for maximum privacy."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What if Ultraviolet is blocked or not working?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Join the Titanium Network Discord at discord.gg/unblock!"
+            }
+          }
+        ]
       }
-
-      img.logo {
-        width: 200px;
-        max-width: 90vw;
-        margin-bottom: 1.5rem;
-        filter: drop-shadow(0 0 10px #00ff88);
-      }
-
-      h1 {
-        margin-bottom: 1rem;
-        font-size: 2.5rem;
-        text-shadow: 0 0 10px #00ff88;
-      }
-
-      form {
-        width: 90%;
-        max-width: 600px;
-      }
-
-      input[type="text"] {
-        width: 100%;
-        padding: 0.75rem 1rem;
-        font-size: 1.2rem;
-        background: #111;
-        color: #00ff88;
-        border: 2px solid #00ff88;
-        border-radius: 10px;
-        outline: none;
-        box-shadow: 0 0 10px #00ff88;
-      }
-
-      input::placeholder {
-        color: #44ff99;
-      }
-
-      footer {
-        position: absolute;
-        bottom: 1rem;
-        font-size: 0.9rem;
-        color: #00ff88aa;
-      }
-    </style>
+    </script>
   </head>
+
   <body>
-    <img src="logo.png" alt="Logo" class="logo" />
-    <h1>Welcome to CreeperProxy</h1>
-    <form id="uv-form">
-      <input
-        id="uv-address"
-        type="text"
-        placeholder="Enter a website URL (https://...)"
-        autocomplete="off"
-      />
+    <!-- LOGO ABOVE SEARCHBAR FOR MAXIMUM HACKERMAN VIBES -->
+    <div class="flex-center logo-wrapper header-center" title="Ultraviolet Logo">
+      <img class="logo" src="logo.png" alt="Ultraviolet Logo" />
+    </div>
+
+    <form id="uv-form" class="flex-center">
       <input
         id="uv-search-engine"
         value="https://www.google.com/search?q=%s"
         type="hidden"
       />
+      <input id="uv-address" type="text" placeholder="Search the web freely" />
     </form>
-    <footer>
-      <span>💻 Powered by Ultraviolet · CreeperProxy 2025</span>
-    </footer>
 
-    <iframe id="uv-frame" style="display: none;"></iframe>
+    <div class="flex-center desc left-margin">
+      <p>
+        Ultraviolet is highly sophisticated proxy used for evading internet
+        censorship.
+      </p>
+    </div>
+
+    <div class="desc left-margin">
+      <p id="uv-error"></p>
+      <pre id="uv-error-code"></pre>
+    </div>
+
+    <footer>
+      <div>
+        <a
+          title="The TitaniumNetwork GitHub organization"
+          href="https://github.com/titaniumnetwork-dev"
+          >TitaniumNetwork</a
+        >
+        <a title="The TitaniumNetwork Discord" href="https://discord.gg/unblock"
+          >Discord</a
+        >
+        <a
+          title="The TompHTTP GitHub organization"
+          href="https://github.com/tomphttp"
+          >TompHTTP</a
+        >
+        <a
+          title="The official deployment repository for Ultraviolet"
+          href="https://github.com/titaniumnetwork-dev/Ultraviolet-App"
+          >GitHub</a
+        >
+        <a title="License information" href="credits.html">Credits</a>
+      </div>
+      <div>
+        <span>Ultraviolet &copy; TN 2023</span>
+      </div>
+    </footer>
+    <iframe style="display: none;" id="uv-frame"></iframe>
   </body>
 </html>
